hard-gists/1040366/run.log
=== Docker Run Log for 1040366 ===
Started at: Mi 29. Okt 11:46:20 CET 2025

[2025-10-29 11:46:21] START: Running container for 1040366
[2025-10-29 11:46:21] SUCCESS: Container eda7c90fa7d0dfb4a2c244be6da32996f96e248d810fff5d041f240b32a83431 started for 1040366
=== Container logs for 1040366 ===
  File "/snippet.py", line 70
    print globals()['__doc__'] % locals()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1040366 ===
[2025-10-29 11:46:23] INFO: Container eda7c90fa7d0dfb4a2c244be6da32996f96e248d810fff5d041f240b32a83431 has stopped
